Some Small Changes

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -17,14 +17,14 @@
 			<img src="css/img/gp.png">
 		</div>
 		<form id="login"class="input-group" action="Login" method="POST">
-			<input type="text" class="input-field" placeholder="User Id" required name="Username">
+			<input type="text" class="input-field" placeholder="Username" required name="Username">
 			<input type="password" class="input-field" placeholder="Enter Password" required name="Password">
 			<input type="checkbox" class="check-box" name="RemPass" ><span>Remember Password</span>
 			<button type="submit" class="submit-btn">Login</button>
 		</form>
 		<form id="register" class="input-group">
-			<input type="text" class="input-field" placeholder="User Id" required>
-			<input type="email" class="input-field" placeholder="Email Id" required>
+			<input type="text" class="input-field" placeholder="Username" required>
+			<input type="email" class="input-field" placeholder="Email" required>
 			<input type="password" class="input-field" placeholder="Enter Password" required>
 			<input type="checkbox" class="check-box"><span>I agree to something</span>
 			<button type="submit" class="submit-btn">Register</button>
