first email sender

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -17,7 +17,7 @@
 			<img src="css/img/tw.png">
 			<img src="css/img/gp.png">
 		</div>
-		<form id="login"class="input-group" action="Login" method="POST">
+		<form id="login"class="input-group" action="SendEmail" method="GET">
 			<input type="text" class="input-field" placeholder="Username" required name="Username">
 			<input type="password" class="input-field" placeholder="Enter Password" required name="Password">
 			<input type="checkbox" class="check-box" name="RemPass" ><span>Remember Password</span>
